# genesis-knowledge-app

./: .dockerignore  .env.example  .env.sample  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.kuberek.yml  docker-compose.yml  opencode.json  opencode.sample.json  pyproject.toml  settings.toml  skills-lock.json
.github/workflows/: ci.yml  quality.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/: Dockerfile  entrypoint.sh
docker/keycloak/: Dockerfile  realm-export.json
docker/postgres/: Dockerfile  init-keycloak-db.sql
docs/: getting-started.md
docs/product/: initial-user-prompt-v2.md  initial-user-prompt.md
docs/product/user-requirements/: food_questions.md  sample_data_questions.md
docs/specs/: README.md
docs/specs/authentication/: spec.md
docs/specs/chat-agent/: spec.md
docs/specs/chat-persistence/: spec.md
docs/specs/database-layer/: design.md  proposal.md  spec.md  tasks.md
docs/specs/docker-polish/: spec.md
docs/specs/document-ingestion/: spec.md
docs/specs/mcp-tools/: spec.md
docs/specs/project-scaffold/: design.md  exploration.md  proposal.md  spec.md  tasks.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
src/knowledge_api/: __init__.py  app.py  cli.py
src/knowledge_core/: __init__.py  config.py  exceptions.py
src/knowledge_workers/: __init__.py
tests/: conftest.py
tests/integration/: conftest.py  test_chat.py  test_documents.py  test_graph.py  test_health.py  test_query_verification.py  test_websocket.py
tests/unit/: test_api_endpoints.py  test_auth.py  test_chat_agent.py  test_database_repository.py  test_domain_entities.py  test_entity_extractor.py  test_entity_resolver.py  test_health.py  test_imports.py  test_llm_client.py  test_mcp.py  test_parsers.py  test_ports.py  test_websocket_handler.py
(+65 files in other folders)
