[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-app"
version = "1.3.11"
description = "Knowledge Management web application with entity extraction and graph-based search"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "dynaconf>=3.2",
    "cyclopts>=3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "websockets>=14.0",
    "fastapi-mcp>=0.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "litellm>=1.60",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "pandas>=2.2",
    "trafilatura>=2.0",
    "aiofiles>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "httpx>=0.28",
]

[project.scripts]
knowledge = "knowledge_api.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): v{version}"
tag_format = "v{version}"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: live integration tests requiring running Docker stack",
    "llm: tests that require LLM API access (may be slow or costly)",
]
